<resources>
    <string name="app_name">Student\'s City</string>
    <string name="filter">Filter</string>
    <string name="filter_all">All Places</string>
    <string name="filter_bars">Bars &amp; Clubs</string>
    <string name="filter_restaurants">Restaurants</string>
    <string name="filter_cafes">Cafés</string>
    <string name="toggle_view">Toggle View</string>
    <string name="add_new_place">Add New Place</string>
    <string name="place_name">Place Name</string>
    <string name="place_description">Description</string>
    <string name="tap_map_location">Tap on the map to set location</string>
    <string name="submit_place">Submit Place</string>
    <string name="pending_moderation">Pending Moderation</string>
    <string name="place_submitted">Place submitted for moderation</string>
    <string name="error_empty_fields">Please fill all fields</string>
    <string name="error_no_location">Please select a location on the map</string>
    <string name="write_review">Write Review</string>
    <string name="write_your_review">Write your review here…</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="review_submitted">Review submitted for moderation</string>
    <string name="error_empty_review">Please write a review</string>
    <string name="review_metadata_format">By %1$s on %2$s</string>
    <string name="leave_review">Leave a Review</string>
    <string name="view_details">View Details</string>
    <string name="reviews">Reviews</string>
    <string name="place_details">Place Details</string>
    <string name="pending_review">Pending Approval</string>
</resources>