<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toggle_view"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/toggle_view"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_filter"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/filter"
        app:showAsAction="always">
        
        <menu>
            <item
                android:id="@+id/filter_all"
                android:title="@string/filter_all" />
            
            <item
                android:id="@+id/filter_bars"
                android:title="@string/filter_bars" />
            
            <item
                android:id="@+id/filter_restaurants"
                android:title="@string/filter_restaurants" />
            
            <item
                android:id="@+id/filter_cafes"
                android:title="@string/filter_cafes" />
        </menu>
    </item>
</menu> 